Beta release - testing contact form

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html class="no-js" lang="en">
+<html lang="en">
 
 <head>
   <!-- title and meta -->
@@ -13,9 +13,14 @@
 
   <!-- css -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
-  <link rel="stylesheet" href="css/base.css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!--custom js-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/custom.js"></script>
+
 
   <!-- icons -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -28,231 +33,184 @@
         <div class="indexPageInfo"> <center>
           <div class="avatar-frame"><img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=40859ed4f2241f81d9172dadfe9cf28f&oe=562FC347"></div>
           <h2>CHRISTINA</h2>
-          <p>Hi! I'm a Computer Science major with a minor in Managerial Economics. I go to UC Davis!</p>
-          <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="btn btn-default btn-lg">
-            <i class="fa fa-envelope fa-lg"></i>
-          </button></a> 
-          <a href="http://twitter.com/cszhu"><button type="button" class="btn btn-default btn-lg">
-            <i class="fa fa-twitter fa-lg"></i> 
-          </button></a>
-          <a href="http://www.linkedin.com/in/christinaszhu"><button type="button" class="btn btn-default btn-lg">
-            <i class="fa fa-linkedin fa-lg"></i> 
-          </button></a>
-          <a href="https://github.com/cszhu"><button type="button" class="btn btn-default btn-lg">
-            <i class="fa fa-github fa-lg"></i> 
-          </button></a>
+          <p>Hi! I'm a web developer that goes to UC Davis. <br> Catch me at: <a href="http://hacktheplanet.mlh.io/">Hack The Planet</a></p>
+          <div class="container2">
+          <button class="link" onclick="scroll2Abt();">about</button>
+          <button class="link" onclick="scroll2Work();">work</button>
+          <button class="link" onclick="scroll2Contact();">contact</button>
+        </div>
         </center>
       </div>
     </section>
 
-    <section class="module parallax parallax-0">
+
+    <section class="module parallax parallax-0" id="abtHeader">
       <div class="container">
         <h1>about</h1>  
       </div>
     </section>
-
     <section class="module content">
       <div class="container">
 
-
-      <div class="myBox">
-        <p class="myBoxTxt">hello</p>
-      </div>
-
-      <div class="myBox">
-              <div class="col-sm-2">
-                <span class="fa-stack fa-3x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-home fa-inverse fa-stack-1x"></i></a>
-                </span>
-              </div>
-
-              <div class="col-sm-4">
-                <p class="myBoxTxt">Home
-                aaaaaaaaaaaaaaaaaA AAAa aa AAAAA</p>
-              </div>
-
-            </div><!--/col-->
-
-        <div class="col-sm-6 col-xs-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-
-              <div class="col-sm-2">
-              <span class="fa-stack fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-book fa-inverse fa-stack-1x"></i></a>
-              </span>
-              </div>
-
-              <div class="col-sm-4">
-                <p>Education</p>
-              </div>
-
-            </div>
-          </div><!--/panel--> 
-        </div><!--/col-->
-
-        </div> <!--/row-->
-
-        <div class="col-sm-6 col-xs-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-
-              <div class="col-sm-2">
-              <span class="fa-stack fa-3x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-code fa-inverse fa-stack-1x"></i></a>
-              </span>
-              </div>
-
-              <div class="col-sm-4">
-                <p>Languages</p>
-              </div>
-
-            </div>
-          </div><!--/panel--> 
-        </div><!--/col-->
-
-        <div class="col-sm-6 col-xs-6">
-          <div class="panel panel-default">
-            <div class="panel-body">
-
-              <div class="col-sm-2">
-              <span class="fa-stack fa-3x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-wrench fa-inverse fa-stack-1x"></i></a>
-            </span>
-
-              </div>
-
-              <div class="col-sm-4">
-                <p>Tools</p>
-              </div>
-
-            </div>
-          </div><!--/panel--> 
-        </div><!--/col-->  
-
-          </div>
-        </div>
+          <div class="linkCol">
+            <button class="link" onclick="whoAmI();">WHO AM I?</button>
+            <button class="link" onclick="involvement();">INVOLVEMENT</button>
+            <button class="link" onclick="languages();">LANGUAGES & TOOLS</button>
+            <button class="link" onclick="window.open('Resume_ChristinaZhu.pdf')">RESUME</button>
+          </div> <!--linkcol-->
         <br>
-      </div>
-    </section>
 
-    <section class="module parallax parallax-1">
-      <div class="container">
-        <h1>work</h1>
-      </div>
-    </section>
-
-    <section class="module content">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-md-6">
-            <h1> EXPERIENCE</h1>
-            <div class="media">
-
-              <!-- Project 1-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">hypothetical project number one </h4>
-                um i promise i'll make stuff soon sorry i am useless lmao
-              </div><br><br>
-
-              <!-- Project 2-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">cute rilakkumas</h4>
-                what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
-              </div><br><br>
-
-              <!-- Project 3-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">hmmm</h4>
-                i'll make something cool i promise
-              </div>
+          <div class="aboutText">
+            <p id="aboutText">I'm Christina! I'm from the Bay Area and I'm studying Computer Science at UC Davis. I love sleeping, aesthetically pleasing designs, and birbs. You can find me planning my next hackathon and finding more stickers to put on my new Macbook. <br>
+              I'm also minoring in Managerial Economics, because it turns out I have a passion for business too. Drop me a line and let's talk!</p>
             </div>
-          </div>
 
-          <div class="col-md-6">
-            <h1> PROJECTS</h1>
-            <div class="media">
-
-              <!-- Project 1-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_3b67b9db563e_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">hypothetical project number one </h4>
-                um i promise i'll make stuff soon sorry i am useless lmao
-              </div><br><br>
-
-              <!-- Project 2-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_164063315c5d_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">cute rilakkumas</h4>
-                what should i make? i should make something cool? do classe projects count? what if i put my btree here? is that allowed
-              </div><br><br>
-
-              <!-- Project 3-->
-              <div class="media-left">
-                <a href="#">
-                  <img class="media-object" src="http://33.media.tumblr.com/avatar_2c612126bcd8_64.png" alt="">
-                </a>
-              </div>
-
-              <div class="media-body">
-                <h4 class="media-heading">hmmm</h4>
-                i'll make something cool i promise
-              </div>
-              <br><br>
-            </div>
-          </div>
         </div>
       </section>
 
-      <section class="module parallax parallax-2">
+      <section class="module parallax parallax-1" id="workHeader">
+        <div class="container">
+          <h1>work</h1>
+        </div>
+      </section>
+
+      <section class="module content">
+        <div class="container">
+
+          <div class="panel panel-default" id="customPanel">
+            <a href="http://www.monetate.com"><div class="panel-heading" id="panelHead">software engineer intern @ monetate</div></a>
+            <div class="panel-body" id="panelBody">
+              <img src="img/monetate.png">  
+              <div id="panelBodyTxt">
+                <b>Jun 2015 - Aug 2015</b><br>
+                • Spent 10 weeks on the Delivery Engineering team as a Javascript intern working with git and Javascript/jQuery<br>
+                • Created custom Javascript elements and script extensions for major e-commerce websites such as Chanel, Vera Bradley, and Nike<br>
+                • Collaborated with other engineers through code reviews and architecture planning meetings.<br>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default" id="customPanel">
+            <a href="http://pennappsfellows.com"><div class="panel-heading" id="panelHead">pennapps fellow c/o 2015</div></a>
+            <div class="panel-body" id="panelBody">
+              <img src="img/pennappsfellows.png">
+              <div id="panelBodyTxt">
+                <b>Jun 2015 - Aug 2015</b><br>
+                • One of 14 selected applicants for competitive tech fellowship program<br>
+                • Volunteered in Philadelphia's tech startup scene and attended tech conferences<br>
+                • Paired with Monetate for a 10-week internship with paid housing
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default" id="customPanel">
+            <a href="http://daviscsclub.org/"><div class="panel-heading" id="panelHead">marketing director @ davis cs club</div></a>
+            <div class="panel-body" id="panelBody">
+              <img src="img/daviscsclub2.jpg">
+              <div id="panelBodyTxt">
+                <b>Jun 2015 - Present</b><br>
+                • Created custom graphic illustrations and designs for club events using InDesign and Illustrator<br>
+                • Marketed club events to school audience and retained membership. <br>
+                • Oversaw the running of Davis Computer Science club and helped tutor and mentor other computer science students.
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default" id="customPanel">
+            <a href="http://pennhealthx.com/"><div class="panel-heading" id="panelHead">TA @ penn healthx</div></a>
+            <div class="panel-body" id="panelBody">
+              <img src="img/pennhealthx.png">
+              <div id="panelBodyTxt">
+                <b>Jun 2015 - Aug 2015</b><br>
+                • Volunteered as a Teacher Assistant for a summer Intro to Coding Class for medical students at University of Pennsylvania<br>
+                • Tutored students in HTML/CSS as well as Ruby on Rails <br>
+                • Helped plan curriculum and gave feedback on problem sets
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default" id="customPanel">
+            <a href="http://pennappsfellows.com"><div class="panel-heading" id="panelHead">marketing manager @ unboard</div></a>
+            <div class="panel-body" id="panelBody">
+              <img src="img/unboard.png">
+              <div id="panelBodyTxt">
+                <b>Jan 2015 - May 2015</b><br>
+                • Technically test and provide bug and design feedback on the gaming prototype through Unity<br>
+                • Handled marketing segmentation and opportunity assessment efforts to develop an optimal marketing strategy. <br>
+                • Reviewed and managed the production of marketing content, such as posts, emails, and personal messages
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default" id="customPanel">
+            <a href="https://cru.ucdavis.edu/"><div class="panel-heading" id="panelHead">marketing assistant @ UCD CRU</div></a>
+            <div class="panel-body" id="panelBody">
+              <div id="panelBodyTxt"><b>Nov 2013 - Jan 2015</b><br>
+              • Develop and execute marketing campaigns, design concepts, ideas, and slogans to promote UCD CRU <br>
+              • Analyze and synthesize information to develop comprehensive, effective written content for various marketing materials.<br>
+              • Proofread and content-edit a variety of marketing materials in different mediums</div>
+              <img src="img/cru.png">
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="module parallax parallax-2" id="contactHeader">
         <div class="container">
           <h1>contact</h2>
           </div>
         </section>
 
         <section class="module content">
-          <div class="container">
-            <h2>call me beep me if you wanna reach me</h2>
-            <p></p>
+          <div class="container2">
+            <center>
+            <p>Call me beep me if you wanna reach me</p>
+          </center>
+          
+
+            <form class="custom" role="form" action="contact.php" id="contactForm" method="post">
+              <div class="form-group">
+                  <input type="name" id="name" class="form-control" id="inputName" name="name" placeholder="Name">
+              </div>
+              <div class="form-group">
+                  <input type="email" id="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
+              </div>
+              <div class="form-group">
+                  <textarea type="message" id="message" class="form-control" id="inputMsg" name="message" rows="5" placeholder="What's on your mind, friend?"></textarea>
+              </div>
+              <div id="formMessages"></div>
+              <div class="form-group">
+                  <center><button id="submit" name="submit" type="submit" value="Send" class="link">Submit</button></center>
+              </div>
+            </form>
+            <br>
+            <div class="bottomButtons">
+              <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="boxy">
+                <i class="fa fa-envelope fa-lg"></i>
+              </button></a> 
+              <a href="http://twitter.com/cszhu"><button type="button" class="boxy">
+                <i class="fa fa-twitter fa-lg"></i> 
+              </button></a>
+              <a href="http://www.linkedin.com/in/christinaszhu"><button type="button" class="boxy">
+                <i class="fa fa-linkedin fa-lg"></i> 
+              </button></a>
+              <a href="https://github.com/cszhu"><button type="button" class="boxy">
+                <i class="fa fa-github fa-lg"></i> 
+              </button></a>
+              <a href="https://instagram.com/xtina.zhu/"><button type="button" class="boxy">
+                <i class="fa fa-instagram fa-lg"></i> 
+              </button></a>
+              <a href="https://open.spotify.com/user/1253438384/playlist/741aFb31Otpk9EXqb92Ihw"><button type="button" class="boxy">
+                <i class="fa fa-spotify fa-lg"></i> 
+              </button></a>
+            </div>
+            <br>
+            <p>Made with <span id="stingray"><img src="stingray.png" id="stingrayImg">&hearts;</img></span> by Christina Zhu</p>
           </div>
         </section>
 
       </main><!-- /main -->
-
-
     </div><!-- /#wrapper -->
 
   </body>
