Turns out github doesn't support php

--- a/index.html
+++ b/index.html
@@ -164,12 +164,9 @@
 
         <section class="module content">
           <div class="container2">
-            <center>
-            <p>Call me beep me if you wanna reach me</p>
-          </center>
-          
-
-            <form class="custom" role="form" action="contact.php" id="contactForm" method="post">
+            <center><p>Want to grab some brick toast and talk about scifi novels?</p></center><br>
+            <a href="mailto:cszhu@ucdavis.edu"><button class="link">email me!</button></a>
+            <!-- <form class="custom" role="form" action="contact.php" id="contactForm" method="post">
               <div class="form-group">
                   <input type="name" id="name" class="form-control" id="inputName" name="name" placeholder="Name">
               </div>
@@ -183,12 +180,10 @@
               <div class="form-group">
                   <center><button id="submit" name="submit" type="submit" value="Send" class="link">Submit</button></center>
               </div>
-            </form>
+            </form> -->
             <br>
+            <div class="container">
             <div class="bottomButtons">
-              <a href="mailto:cszhu@ucdavis.edu"><button type="button" class="boxy">
-                <i class="fa fa-envelope fa-lg"></i>
-              </button></a> 
               <a href="http://twitter.com/cszhu"><button type="button" class="boxy">
                 <i class="fa fa-twitter fa-lg"></i> 
               </button></a>
@@ -205,6 +200,7 @@
                 <i class="fa fa-spotify fa-lg"></i> 
               </button></a>
             </div>
+          </div>
             <br>
             <p>Made with <span id="stingray"><img src="stingray.png" id="stingrayImg">&hearts;</img></span> by Christina Zhu</p>
           </div>
