--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
       <section class="module header">
         <div class="indexPageInfo"> <center>
-          <div class="avatar-frame"><img src="https://pbs.twimg.com/profile_images/627989679552491520/uboMQZew.jpg"></div>
+          <div class="avatar-frame"><img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=0ef48d4b1b2f103d41ea5c2bdcf506b2&oe=567EDD47"></div>
           <h2>CHRISTINA</h2>
           <p>Hi! I'm a web developer that goes to UC Davis. <br> Catch me at: <a href="http://hacktheplanet.mlh.io/">Hack The Planet</a></p>
           <div class="container2">
