hack the planet is over - changed where i'm gonna be next yahoo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="indexPageInfo"> <center>
           <div class="avatar-frame"><img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=0ef48d4b1b2f103d41ea5c2bdcf506b2&oe=567EDD47"></div>
           <h2>CHRISTINA</h2>
-          <p>Hi! I'm a web developer that goes to UC Davis. <br> Catch me at: <a href="http://hacktheplanet.mlh.io/">Hack The Planet</a></p>
+          <p>Hi! I'm a web developer that goes to UC Davis. <br> Catch me at: <a href="http://2015f.pennapps.com/">PennApps</a></p>
           <div class="container2">
           <button class="link" onclick="scroll2Abt();">about</button>
           <button class="link" onclick="scroll2Work();">work</button>
