--- a/pennapps15.html
+++ b/pennapps15.html
@@ -2,8 +2,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="typeahead2.js"></script>
 
-	<script src="https://code.highcharts.com/highcharts.js"></script>
-	<script src="https://code.highcharts.com/modules/exporting.js"></script>
+	<script src="highcharts.js"></script>
+	<script src="exporting.js"></script>
 	<script src="script.js"></script>
 	<link rel="stylesheet" href="style2.css">
 	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
