--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-5 centered">
-					<img id="avatar" style="border-radius:50%; width:20vw; height: auto;" src="https://pbs.twimg.com/profile_images/651896904746274816/k6NfizEq.jpg" alt="">
+					<img id="avatar" style="border-radius:50%; width:20vw; height: auto;" src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xaf1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg" alt="">
 				</div>
 				
 				<div class="col-lg-7 centered">
