--- a/index.html
+++ b/index.html
@@ -1,87 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-	<title>Christina Zhu</title>
+  <title>Christina Zhu</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link href="assets/css/main.css" rel="stylesheet">
-	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="icon" href="favicon.jpg">
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main2.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="icon" href="favicon.jpg">
 
-	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
-	<script src="assets/js/chart.js"></script>
-	<script src="assets/js/bootstrap.js"></script>
+  <script src="assets/js/chart.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
 
 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
       <![endif]-->
-  </head>
+</head>
 
-  <body>
-  	<div id="hello">
-  		<div class="mainwrap">
-  			<div id="avatar">
-  				<img src="https://scontent-lax3-1.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/11377291_10206783920659536_782134966661185120_n.jpg?oh=4d7b6084bb0cf0dadf8558e9c42ba15a&oe=56CDF747" id="myAv">
-  			</div>
-  			<div id="main">
-  				<center><a data-toggle="collapse" href="#aboutcollapse" aria-expanded="false" aria-controls="collapseExample">about me</a></center>
-  				<div class="collapse" id="aboutcollapse">
-  					<div class="well">
-  						Hello! I'm Christina!<br>
-  						I'm a junior at UC Davis studying CS.
-  						One of the directors of Hack Davis, coming Spring 2016. <br>
-  					</div>
-  				</div>
-  				
+<body>
+  <div id="title">CHRISTINA ZHU</div>
+  <div id="content">
+    <div id="photo"><img id="pic" src="assets/img/avatar.jpg"></div>
+    <div id="text">
+    hey, i'm christina!<br>
+    i'm currently studying computer science at uc davis.<br><br>
+    <b>work</b><br>
+    software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- summer '16</span><br>
+    software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- summer '15</span><br>
+    programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- summer '15</span><br><br>
 
-  				<center><a data-toggle="collapse" href="#aboutcollapse2" aria-expanded="false" aria-controls="collapseExample">experience</a></center>
-  				<div class="collapse" id="aboutcollapse2">
-  					<div class="well">
-  						Software Engineering Intern <b>@</b> <a class="wella" href="http://monetate.com">Monetate</a>
-  						<br>
-  						Volunteer Instructor <b>@</b> <a class="wella" href="http://girlswhocode.com/">Girls Who Code</a><br>
-  						Fellow <b>@</b> <a class="wella" href="http://pennappsfellows.com">PennApps Fellows</a><br>
-  						Web Dev <b> @ </b> <a class="wella" href="http://staging.newdayint.com/">New Day International</a>
-  						<br>
-  					</div>
-  				</div>
-  				
+    <b>things i do</b><br>
+    co-founder @ <a href="http://hackdavis.io">hackdavis</a> <br>
+    instructor @ <a href="http://girlswhocode.com">girls who code</a><br>
+    officer @ <a href="http://daviscsclub.org">davis cs club</a><br>
+    fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
+    engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a> <br><br>
 
-   				<center><a data-toggle="collapse" href="#aboutcollapse3" aria-expanded="false" aria-controls="collapseExample">contact</a></center>
-  				<div class="collapse" id="aboutcollapse3">
-  					<div class="well">
-  						Want to grab a coffee sometime? Feel free to shoot me an email at <a class="wella" href="mailto:cszhu@ucdavis.edu">cszhu@ucdavis.edu</a>.
-  					</div>
-  				</div>
+    <b>contact</b><br>
+    <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
+    <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
+    <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
+    <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
+    </div>
 
-  				<center><a href="cszhu_Resume.pdf">resume</a></center>
-
-
-  				<div id="contact">
-  					<a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-twitter fa-1x fa-inverse"></i></a>
-  					<a class="icon" href="http://github.com/cszhu"><i class="fa fa-github fa-1x fa-inverse"></i></a>
-  					<a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-linkedin fa-1x fa-inverse"></i></a>
-  					<a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-envelope fa-1x fa-inverse"></i></a>
-				</div>
-
-  			</div>
-  		</div> <!-- /container -->
-  	</div><!-- /hello -->
-
-  	<script src="assets/js/bootstrap.js"></script>
-  </body>
-  </html>
+  </div>
+</body>
