--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="assets/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="assets/css/main2.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/font-awesome.min.css" rel="stylesheet">
   <link rel="icon" href="favicon.jpg">
 
