--- a/index.html
+++ b/index.html
@@ -2,32 +2,27 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Hey, I'm Christina! I'm a Computer Science student at UC Davis.">
+  <meta name="author" content="Christina Zhu">
 
   <title>Christina Zhu</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-
   <!-- Custom styles for this template -->
-  <link href="assets/css/main.css" rel="stylesheet">
-  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- Favicon -->
   <link rel="icon" href="favicon.jpg">
 
+  <!-- CSS -->
+  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
+  <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
-  <script src="assets/js/chart.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-      <![endif]-->
 </head>
 
 <body>
@@ -35,26 +30,26 @@
   <div id="content">
     <div id="photo"><img id="pic" src="assets/img/avatar.jpg"></div>
     <div id="text">
-    hey, i'm christina!<br>
-    i'm currently studying computer science at uc davis.<br><br>
-    <b>work</b><br>
-    software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- summer '16</span><br>
-    software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- summer '15</span><br>
-    programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- summer '15</span><br><br>
+      hey, i'm christina!<br>
+      i'm currently studying computer science at uc davis.<br><br>
 
-    <b>things i do</b><br>
-    co-founder @ <a href="http://hackdavis.io">hackdavis</a> <br>
-    instructor @ <a href="http://girlswhocode.com">girls who code</a><br>
-    officer @ <a href="http://daviscsclub.org">davis cs club</a><br>
-    fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
-    engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a> <br><br>
+      <b>work</b><br>
+      software engineering intern @ <a href="http://amazon.com">amazon</a> <span class="sub">- summer '16</span><br>
+      software engineering intern @ <a href="http://monetate.com">monetate</a> <span class="sub">- summer '15</span><br>
+      programming TA @ <a href="http://pennhealthx.com">penn healthx</a> <span class="sub">- summer '15</span><br><br>
 
-    <b>contact</b><br>
-    <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
-    <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
-    <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
-    <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
+      <b>things i do</b><br>
+      co-founder @ <a href="http://hackdavis.io">hackdavis</a> <br>
+      instructor @ <a href="http://girlswhocode.com">girls who code</a><br>
+      officer @ <a href="http://daviscsclub.org">davis cs club</a><br>
+      fellow '15 @ <a href="http://pennappsfellows.com">pennapps fellows</a><br>
+      engineering diversity scholar 2015 @ <a href="http://boxdiversityscholarship.com">box</a> <br><br>
+
+      <b>contact</b><br>
+      <a class="icon" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
+      <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
+      <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
+      <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
     </div>
-
   </div>
 </body>
