--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       <a class="icon" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
       <a class="icon" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
       <a class="icon" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
-    </div>2
+    </div>
   </div>
 </body>
