--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.jpg">
+  
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
 
   <!-- CSS -->
   <link href="assets/css/main.css" rel="stylesheet">
