added more text

--- a/firefly.html
+++ b/firefly.html
@@ -12,6 +12,7 @@
 
 <body>
   <div id="title">firefly.js</div>
+  <div id="subtitle">A simple js/canvas script to overlay fireflies over any div. Code can be found <a href="https://github.com/cszhu/firefly.js">here</a>.</div><br>
   <div id="buttons"> 
     <div id="numero">
       <button type="button" id="more" onclick="number(more)" class="btn btn-secondary btn-lg">More</button>
